services/nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: edu-svc
  namespace: nginx
spec:
  selector:
    app: edu
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
