services/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: nginx-notes-ingress
  namespace: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: edu-svc
            port:
              number: 8000
